kubernetes/portainer/portainer-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  annotations:
    argocd.argoproj.io/sync-wave: "10"
