kubernetes/portainer/portainer-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik
    argocd.argoproj.io/sync-wave: "30"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: portainer-helm
          port: 9443
          scheme: https
          serversTransport: portainer-serverstransport
